fixing spacing in asset lists with highights

--- a/portal/media/css/style.css
+++ b/portal/media/css/style.css
@@ -433,7 +433,6 @@ a.display-name {
 	font-weight: bold;
 	text-decoration: none;
 	margin: 10px 0;
-	clear: right;
 	display: block;
 	
 }
